# MNPBEM

./: .gitignore  CHANGELOG.md  diag_con.py  diag_iter.py  pyproject.toml
GUI/: gui_main.py  gui_test.py  mnpbem_environment.yml  simulation_state.py  style.qss
GUI/mnpbem/: __init__.py
GUI/pages/: post_processing.py  simulation.py  start.py
GUI/widgets/: calculation_figure.py  calculation_item.py  energy_range.py  excitation_settings.py  field_grid.py  import_loading.py  material_dropdown.py  material_settings.py  refractive_display.py  simulation_dialog.py  solver_options.py  state_dialog.py  structure_settings.py  structure_view.py  tooltip_combobox.py
benchmarks/: lane_e2_25k_face.py  lane_e2_25k_precond.py  lane_e2_nonlocal_25k.py
comparison/: python_sphere_substrate.py
docs/: ARCHITECTURE.md  GUI_DESIGN_OUTLINE.md  GUI_GUIDE.md  GUI_SETUP.md  MIGRATION_GUIDE.md  PERFORMANCE.md  RELEASE_CHECKLIST.md  RELEASE_NOTES_v1.5.2.md  RELEASE_NOTES_v1.6.0.md  RELEASE_NOTES_v1.6.1.md  RELEASE_NOTES_v1.6.2.md  RELEASE_NOTES_v1.7.0.md
examples/: 01_sphere_extinction.py  02_dimer_gold.py  03_substrate_layered.py  04_dipole_decay.py  05_eels.py  06_iterative_aca.py  07_gpu_multigpu.py
mnpbem/: __init__.py
mnpbem/bem/: __init__.py  bem_iter.py  bem_layer_mirror.py  bem_ret.py  bem_ret_iter.py  bem_ret_layer.py  bem_ret_layer_iter.py  bem_ret_mirror.py  bem_stat.py  bem_stat_eig_mirror.py  bem_stat_iter.py  bem_stat_layer.py  bem_stat_mirror.py  schur_helpers.py  schur_iter_helpers.py  solver_factory.py
mnpbem/examples/: demo_nanosphere_spectrum.py
mnpbem/geometry/: __init__.py  compoint.py  compound.py  connect.py  edgeprofile.py  mesh2d.py  mesh_generators.py  particle.py  polygon3.py  shape_functions.py
mnpbem/greenfun/: __init__.py  _numba_kernels.py  _numba_refine.py  _numba_ret_kernels.py  aca_compgreen_ret.py  aca_compgreen_ret_layer.py  aca_compgreen_stat.py  clustertree.py  compgreen_ret.py  compgreen_ret_layer.py  compgreen_ret_mirror.py  compgreen_stat.py  compgreen_stat_layer.py  compgreen_stat_mirror.py  compgreentab_layer.py  coverlayer.py  greenfunction.py  greenret_refined.py  greenstat.py  greentab_layer.py  hmatrix.py
mnpbem/materials/: __init__.py  eps_table.py
mnpbem/mie/: __init__.py  mie_gans.py  mie_ret.py  mie_solver.py  spherical_harmonics.py
mnpbem/misc/: distance_utils.py  gauss_legendre.py  igrid.py  math_utils.py  quadface_misc.py  shapes.py  units.py  valarray.py  vecarray.py
tests/: perf_gpu_lu.py  perf_meshfield_fmm.py  test_bem_iter.py  test_compound.py  test_e2e_distributed.py  test_edge_cases_output.py  test_gpu_all_solvers.py  test_gpu_dispatch.py  test_gpu_lane_b.py  test_iter_multipol.py  test_matan2.py  test_matlab_transcendentals.py  test_meshfield_fmm.py  test_meshfield_numba.py  test_multirhs_dipole.py  test_numba_closed_surface.py  test_numba_compgreen_stat.py  test_numba_layer.py  test_polygon_utils.py
validation/: perf_5000face.py  perf_hmatrix_bench.py
(+178 files in other folders)
