[build-system]
# setuptools < 77 to keep Metadata-Version <= 2.3 (PEP 639 license-file
# emission disabled). twine 6.x / pkginfo 1.12 not yet PEP 639 compliant.
requires = ["setuptools>=64,<77", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "mnpbem"
version = "1.6.2"
description = "Python port of MNPBEM (Boundary Element Method for plasmonics, Garcia de Abajo & Howie 2002)"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
    { name = "MNPBEM Python port contributors" },
]
maintainers = [
    { name = "MNPBEM Python port contributors" },
]
keywords = [
    "BEM",
    "plasmonics",
    "Maxwell",
    "nanoparticle",
    "electrodynamics",
    "scattering",
    "EELS",
    "MNPBEM",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Visualization",
    "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy>=1.26",
    "scipy>=1.13",
    "numba>=0.59",
    "matplotlib>=3.8",
    "lmfit>=1.3",
    "h5py>=3.10",
    "tqdm>=4.66",
    "python-box>=7.3.2",
]


[project.optional-dependencies]
# Hardware / runtime accelerators (each can be installed independently).
gpu = [
    "cupy-cuda12x>=13.0",
]
mpi = [
    "mpi4py>=3.1",
]
fmm = [
    "fmm3dpy>=1.0.4",
]
# All accelerators in one shot. pip resolves the nested extra on recent
# versions (>=21.2); older pip should expand it manually:
#   pip install "mnpbem[gpu,mpi,fmm]"
all = [
    "mnpbem[gpu,mpi,fmm]",
]
# Development tooling: tests, packaging helpers.
dev = [
    "pytest>=8.0",
    "pytest-timeout>=2.3",
    "pytest-xdist>=3.5",
    "pyyaml>=6.0",
    "build>=1.0",
    "twine>=5.0",
]
# Alias for users who only want the test runner stack.
test = [
    "mnpbem[dev]",
]
# Documentation build (Sphinx + RTD theme + Markdown bridge).
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=2.0",
    "myst-parser>=2.0",
]


# [project.urls] intentionally omitted for the internal release.
# Public homepage / repository / issue tracker URLs will be set when external
# distribution is decided.


[tool.setuptools.packages.find]
include = ["mnpbem*"]
exclude = ["tests*", "docs*", "examples*", "validation*", "comparison*"]


[tool.setuptools.package-data]
mnpbem = [
    "materials/data/*",
    "materials/data/**/*",
]


[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "fast: < 1 minute, runs every commit",
    "slow: 10-60 minutes, daily nightly",
    "long: > 60 minutes, weekly",
    "gpu: requires CUDA + cupy",
]
